# safaa

./: CHANGELOG.md  REUSE.toml  pyproject.toml
.github/workflows/: build-test.yml  code-quality.yml  data_pipeline.yml  fetch_train_deploy.yml  release-publish.yml  version-compatibility.yml
Safaa/src/safaa/: Safaa.py
Safaa/src/safaa/models/: false_positive_detection_model_sgd.pkl  false_positive_detection_vectorizer.pkl  metrics.json
Safaa/src/safaa/models/entity_recognizer/: meta.json
scripts/: data-training.md  train_and_release.py
