# SPDX-FileCopyrightText: © 2023 abdelrahmanjamal5565@gmail.com
# SPDX-FileCopyrightText: © 2026 Siemens AG
# SPDX-FileContributor: Kaushlendra Pratap Singh <kaushlendra-pratap.singh@siemens.com>
# SPDX-FileContributor: Gaurav Mishra <mishra.gaurav@siemens.com>
#
# SPDX-License-Identifier: LGPL-2.1-only

[build-system]
requires = ['poetry-core>=2.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
version = '0.0.4'
classifiers = [
    'Programming Language :: Python :: 3'
]
packages = [
    {include = 'safaa', from = 'Safaa/src'},
]
include = [
    {path = 'Safaa/src/safaa/models/**/*', format = ['sdist', 'wheel']},
    {path = 'Safaa/src/safaa/configs/**/*', format = ['sdist', 'wheel']},
]
exclude = [
    'datasets/',
    'scripts/',
    'utility/',
    'LICENSES/',
    'REUSE.toml',
    'CHANGELOG.md',
    'Safaa/build/',
    'Safaa/dist/',
]
requires-poetry = '>=2.0.0,<3.0.0'

[tool.poetry.dependencies]
python = '>=3.9,<3.14'

[tool.poetry.group.dev.dependencies]
psycopg2-binary = '>=2.9'
requests = '>=2.28'
flake8 = '*'
build = '*'

[project]
name = 'safaa'
description = "Reduces Fossology's false positive copyrights by predicting whether a given copyright output is a false positive and removing extraneous text from copyright notices."
license = 'LGPL-2.1-only'
dynamic = ['version', 'classifiers']
readme = 'README.md'
authors = [
    {name = 'Abdelrahman Jamal', email = 'abdelrahmanjamal5565@gmail.com'}
]
maintainers = [
    {name = 'Gaurav Mishra', email = 'mishra.gaurav@siemens.com'},
    {name = 'Kaushlendra Pratap', email = 'kaushlendra-pratap.singh@siemens.com'}
]
requires-python = '>=3.9,<3.14'
dependencies = [
    'spacy (==3.8.7)',
    'joblib (==1.5.3)',
    'pandas (==2.3.1)',
    'scikit-learn (==1.6.1)'
]

[project.urls]
homepage = 'https://github.com/fossology/safaa'
repository = 'https://github.com/fossology/safaa'
